@@ -7,9 +7,8 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
+import java.util.function.BinaryOperator;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class Day9 implements Day<Long, Long> {
 
@@ -26,16 +25,23 @@ public class Day9 implements Day<Long, Long> {
             .sum();
     }
 
-    private long doStuff(String line, Function<List<Long>, Long> getter, BiConsumer<List<Long>, Long> setter, BiFunction<Long, Long, Long> calculator) {
+    @Override
+    public Long secondMethod() {
+        return input.stream()
+            .mapToLong(line -> doStuff(line, List::getFirst, List::addFirst, this::minus))
+            .sum();
+    }
+
+    private long doStuff(String line, Function<List<Long>, Long> getter, BiConsumer<List<Long>, Long> setter, BinaryOperator<Long> calculator) {
         List<Long> numbers = Arrays.stream(line.split(" "))
             .map(Long::parseLong)
-            .collect(Collectors.toList());
+            .toList();
         doStuffWithNumbers(numbers, getter, setter, calculator);
         return getter.apply(numbers);
     }
 
     private void doStuffWithNumbers(List<Long> numbers, Function<List<Long>, Long> getter, BiConsumer<List<Long>, Long> setter,
-        BiFunction<Long, Long, Long> calculator) {
+        BinaryOperator<Long> calculator) {
         List<Long> otherNumbers = new ArrayList<>();
         for (int i = 1; i < numbers.size(); i++) {
             otherNumbers.add(numbers.get(i) - numbers.get(i - 1));
@@ -55,12 +61,5 @@ public class Day9 implements Day<Long, Long> {
 
     private long minus(Long firstNumber, Long secondNumber) {
         return firstNumber - secondNumber;
-    }
-
-    @Override
-    public Long secondMethod() {
-        return input.stream()
-            .mapToLong(line -> doStuff(line, List::getFirst, List::addFirst, this::minus))
-            .sum();
     }
 }
